--- a/home.html
+++ b/home.html
@@ -127,7 +127,7 @@
                 <div class="responsive col-12 col-lg-4">
                     <p>Fully responsive, <br> custom designed <br> websites
                     </p>
-                    <button type="button" class="btn">View Portfolio<i class="far fa-hand-point-right"></i></button>
+                    <a href="portfolio.html"><button type="button" class="btn">View Portfolio<i class="far fa-hand-point-right"></i></button></a>
                 </div>
             </div>
         </div>
@@ -256,17 +256,17 @@
                 <!-- icons -->
                 <div class="col-12">
                     <ul class="social-list">
-                        <li class="social">
+                        <li class="social1">
                             <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
                         </li>
-                        <li class="social">
+                        <li class="social2">
                             <a href=""><i class="fab fa-google-plus-g"></i></a>
                         </li>
-                        <li class="social">
+                        <li class="social3">
                             <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i
               ></a>
-                        </li class="social">
-                        <li>
+                        </li">
+                        <li class="social4">
                             <a href="https://www.linkedin.com/company/linkedin"><i class="fab fa-linkedin-in"></i
               ></a>
                         </li>
@@ -281,7 +281,7 @@
                         <li><a href="mentorship.html" target="_blank">Mentorship</a></li>
 
                         <li>  <!-- Button trigger modal -->
-                          <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                          <button type="button" class="btn-bottom btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
     Get in Touch
   </button>
   
@@ -324,7 +324,7 @@
                         <li><a href="#">Terms & Conditions</a></li>
                     </ul>
                 </div>
-                <div class="back-to top col-12">
+                <div class="back-to-top col-12">
                     <p class="top">
                         Back to top
                     </p>
