--- a/mentorship.html
+++ b/mentorship.html
@@ -300,6 +300,8 @@
                             <a href="https://www.linkedin.com/company/linkedin"><i class="fab fa-linkedin-in"></i
               ></a>
                         </li>
+                        <li><a href="#" target="_blank"><i class="fas fa-share-alt"></i></a></li>
+                        <li><a href="#" target="_blank"><i class="fas fa-search"></i></a></li>
                     </ul>
                 </div>
                 <!--  Page links -->
