--- a/services.html
+++ b/services.html
@@ -95,6 +95,8 @@ Get in Touch
                     <a href="https://www.linkedin.com/company/linkedin" target="_blank"><i class="fab fa-linkedin-in"></i
           ></a>
                 </li>
+                <li><a href="#" target="_blank"><i class="fas fa-share-alt"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fas fa-search"></i></a></li>
 
             </ul>
         </div>
