--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg ">
+    <nav class="navbar navbar-expand-xl ">
         <div class="container justify-content-around">
             <div class="name">
                 <a class="navbar-brand mr-5" href="#">
@@ -28,16 +28,16 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="home.html" target="_blank">Home</a>
+                        <a class="nav-link" aria-current="page" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="portfolio.html" target="_blank">Portfolio</a>
+                        <a class="nav-link" aria-current="page" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="services.html" target="_blank">Services</a>
+                        <a class="nav-link" aria-current="page" href="services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="mentorship.html" target="_blank">Mentorship</a>
+                        <a class="nav-link" aria-current="page" href="mentorship.html">Mentorship</a>
                     </li>
                     <li>
                         <button type="button" class="btn-nav">
@@ -83,21 +83,21 @@ Get in Touch
             </ul>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="social">
-                    <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a>
+                    <a href="https://twitter.com/" ><i class="fab fa-twitter"></i></a>
                 </li>
                 <li class="social">
-                    <a href="https://www.google.de/" target="_blank"><i class="fab fa-google-plus-g"></i></a>
+                    <a href="https://www.google.de/" ><i class="fab fa-google-plus-g"></i></a>
                 </li>
                 <li class="social">
-                    <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i
+                    <a href="https://www.facebook.com/" ><i class="fab fa-facebook-f"></i
           ></a>
                 </li class="social">
                 <li>
-                    <a href="https://www.linkedin.com/company/linkedin" target="_blank"><i class="fab fa-linkedin-in"></i
+                    <a href="https://www.linkedin.com/company/linkedin" ><i class="fab fa-linkedin-in"></i
           ></a>
                 </li>
-                <li><a href="#" target="_blank"><i class="fas fa-share-alt"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fas fa-search"></i></a></li>
+                <li><a href="#" ><i class="fas fa-share-alt"></i></a></li>
+                <li><a href="#" ><i class="fas fa-search"></i></a></li>
 
             </ul>
         </div>
@@ -200,10 +200,10 @@ Get in Touch
                 <!--  Page links -->
                 <div class="col-12">
                     <ul class="social-list">
-                        <li><a href="home.html" target="_blank">Home</a></li>
-                        <li><a href="portfolio.html" target="_blank">Portfolio</a></li>
-                        <li><a href="services.html" target="_blank">Services</a></li>
-                        <li><a href="mentorship.html" target="_blank">Mentorship</a></li>
+                        <li><a href="home.html" >Home</a></li>
+                        <li><a href="portfolio.html" >Portfolio</a></li>
+                        <li><a href="services.html" >Services</a></li>
+                        <li><a href="mentorship.html" >Mentorship</a></li>
 
                         <li>  <!-- Button trigger modal -->
                           <button type="button" class="btn-bottom btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
