--- a/mentorship.html
+++ b/mentorship.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="home.html">Home</a>
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="portfolio.html">Portfolio</a>
@@ -309,7 +309,7 @@
                 <!--  Page links -->
                 <div class="col-12">
                     <ul class="social-list">
-                        <li><a href="home.html" >Home</a></li>
+                        <li><a href="index.html" >Home</a></li>
                         <li><a href="portfolio.html" >Portfolio</a></li>
                         <li><a href="services.html" >Services</a></li>
                         <li><a href="mentorship.html" >Mentorship</a></li>
