commit-7 added modules

--- a/mentorship.html
+++ b/mentorship.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" aria-current="page" href="services.html">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="mentorship.html">Mentorship</a>
+                        <a class="nav-link mentorship" aria-current="page" href="mentorship.html">Mentorship</a>
                     </li>
                     <li>
                         <button type="button" class="btn-nav">
@@ -104,10 +104,16 @@
             </div>
         </div>
     </nav>
+
+   
+    </div>
     <!-- Mentorship -->
     <section class="section-mentorship">
         <div class="container">
             <div class="row">
+                <div class="col-12 mentor-image">
+                    <img src="./images/Project1/service-3.png" alt="">
+                </div>
                 <div class="col-md-4">
                     <h2>Spot Mentoring</h2>
                     <p class="money"> $50</p>
