--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link home" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="portfolio.html">Portfolio</a>
@@ -129,8 +129,8 @@
     <section class="section-a">
         <div class="container">
             <div class="row">
-                        <div class="col-12">
-                            <img src="./images/Project1/projects20.png" alt="">
+                        <div class="col-12 home-image">
+                            <img src="./images/Project1/intro-section-illustration.png" alt="">
                           <hr>
                         </div>
                         <div class="col-12">
