--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="portfolio.html">Portfolio</a>
+                        <a class="nav-link portfolio" aria-current="page" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="services.html">Services</a>
@@ -107,7 +107,11 @@ Get in Touch
     <!-- Recent Works -->
     <section class="recent-works">
         <div class="container">
+            
             <div class="row">
+                <div class="col-12 portfolio-image">
+                    <img src="./images/Project1/service-2.png" alt="">
+                </div>
                 <div class="col-12">
                     <h1>My Recent Works</h1>
                     <p>Here are a few design projects I've worked on recently. Want to see more? <span>Email me.</span></p>
