--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" aria-current="page" href="portfolio.html">Portfolio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="services.html">Services</a>
+                        <a class="nav-link services" aria-current="page" href="services.html">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="mentorship.html">Mentorship</a>
@@ -107,10 +107,11 @@ Get in Touch
     <section class="section-a">
         <div class="container">
             <div class="row">
+                <div class="col-12 service-image">
+                    <img src="./images/Project1/service-1.png" alt="">
+                </div>
                 <div class="col-12">
-                    <div>
                         <p>Freelance Web Designer & Developer based in Kiel, Germany. <br> Highly experienced in designing & developing custom websites.</p>
-                    </div>
                 </div>
             </div>
         </div>
