--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h3>Adem</h3>
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon"><i class="fas fa-bars"></i></span>
         </button>
             <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -179,7 +179,7 @@
                 <div class="col-12 col-lg-8">
                     <img src="./images/Project1/webdesigner image3.jpg" alt="">
                 </div>
-                <div class="responsive col-12 col-lg-4 test">
+                <div class="responsive col-12 col-lg-4">
                     <p>Fully responsive, <br> custom designed <br> websites
                     </p>
                     <a href="portfolio.html"><button type="button" class="btn">View Portfolio<i class="far fa-hand-point-right"></i></button></a>
