--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <button type="button" class="btn btn-primary">Understood</button>
+                                        <button type="button" class="btn btn-primary">Send</button>
                                     </div>
                                 </div>
                             </div>
