--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,7 @@ Get in Touch
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                    <button type="button" class="btn btn-primary">Understood</button>
+                                    <button type="button" class="btn btn-primary">Send</button>
                                 </div>
                             </div>
                         </div>
