--- a/mentorship.html
+++ b/mentorship.html
@@ -257,7 +257,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-12">
-                    <h1>My Mentoring Style</h1>
+                    <!-- to give a neon light effect -->
+                    <h1 class="neon" data-text="My Mentoring Style">My Mentoring Style</h1>
                     <p>I strive to function as a catalyst and challenge you to grow as both a designer and a human. I care about the details and will encourage you to think, plan, and dream. These are the qualities I will bring to every conversation.</p>
                 </div>
                 <div class="col-md-6">
